Advance in validations EP´s parameters
