# interfaces/http/dto/user_dto.go
@@ -1,0 +1,27 @@
+package dto
+
+import "time"
+
+type UserResponse struct {
+	ID        uint      `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	RoleID    uint      `json:"role_id"`
+	IsActive  bool      `json:"is_active"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type CreateUserRequest struct {
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+	RoleID   uint   `json:"role_id"`
+}
+
+type UpdateUserRequest struct {
+	Name     string `json:"name"`
+	Email    string `json:"email"`
+	RoleID   uint   `json:"role_id"`
+	IsActive bool   `json:"is_active"`
+}
